-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.1
-
None
A component that should ideally qualify for trimming is no longer trimmed. This is a change in behavior due to the fix for QTBUG-53761.
I've created a WIP autotest demonstrating the issue (the test passes prior to the fix for QTBUG-53761, and fails after).
For Gerrit Dashboard: QTBUG-55567 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
169403,5 | Allow for garbage collection of types with errors in trimCache() | 5.6 | qt/qtdeclarative | Status: MERGED | -2 | 0 |